fix: release page nav wrap

--- a/assets/css/releases/main.scss
+++ b/assets/css/releases/main.scss
@@ -170,14 +170,10 @@ a {
 
 #main-nav{
   z-index: 20;
-  position: absolute;
+  position: relative;
   width: 100%;
-
-  .wrapper{
-    margin: auto;
-    max-width: 1400px;
-    width: 100%;
-  }
+  max-width: 1400px;
+  margin: auto;
 }
 
 .preamble{
